--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
-  <meta property='og:title' content='Umezawa-s'>
+  <meta property='og:title' content='Enter IT Partners'>
   <meta property='og:url' content='URL入る'>
-  <meta property='og:description' content='Umezawa-s'>
+  <meta property='og:description' content='Enter IT Partners'>
   <meta property="og:image" content="img/Designer (11).jpeg">
   <meta name="description" content="Umezawa-s" />
   <title>Umezawa-s</title>
@@ -175,8 +175,8 @@ aspect-ratio: 16 / 9;
   <div id="wrapper">
     <header id="header">
       <h1 class="logo">
-        <span class="logo-title">Umezawa-s</span>
-        <span class="logo-desc">IT × consulting</span>
+        <span class="logo-title">Enter IT Partners</span>
+        <span class="logo-desc">プロジェクト上流工程支援</span>
       </h1>
     </header>
     <nav id="gnav">
