--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@ aspect-ratio: 16 / 9;
     <header id="header">
       <h1 class="logo">
         <span class="logo-title">Enter IT Partners</span>
-        <span class="logo-desc">プロジェクト上流工程支援</span>
+        <span class="logo-desc">変革の土台を築き、利益への道筋を示す</span>
       </h1>
     </header>
     <nav id="gnav">
       <ul>
-        <li><i class="fas fa-user fa-lg"><a href="#Profile">PROFILE</a></i></li>
-        <li><i class="fas fa-tasks fa-lg""><a href="#EXPERIENCE">EXPERIENCE</a></i></li>
+        <li><i class="fas fa-tasks fa-lg"><a href="#Profile">Service</a></i></li>
+        <li><i class="fas fa-user fa-lg""><a href="#EXPERIENCE">About us</a></i></li>
         <li><i class="fas fa-envelope fa-lg"><a href="#contact">CONTACT</a></i></li>
   <li id="langChenge2"><div id="langChenge">
     <input type="radio" name="land" id="langJa" checked>
